# raspi-cross-compile-gl

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  generate_install_script.sh  install_deps.sh  output.ppm
.devcontainer/: Dockerfile  aarch64-linux-gnu.cmake  devcontainer.json  sync_sysroot.sh
include/: Application.h  FPSCounter.h  GStreamerSupport.h  GraphicsPlatform.h  Renderer.h  ShaderUtils.h  TelopRenderer.h  Util.h
shaders/: nv12.frag  nv12.vert  telop.frag  telop.vert
src/: Application.cpp  GStreamerSupport.cpp  GraphicsPlatform.cpp  Renderer.cpp  ShaderUtils.cpp  TelopRenderer.cpp  Util.cpp  main.cpp
